tests/ui-e0283-current-all-features/default_cant_infer_through_draw.stderr
error[E0283]: type annotations needed
  --> tests/ui-e0283-current-all-features/default_cant_infer_through_draw.rs:11:21
   |
11 |     let _ = tc.draw(gs::default());
   |                ---- ^^^^^^^^^^^^^ cannot infer type for type parameter `impl PrintableGenerator<T>` declared on the method `draw`
   |                |
   |                required by a bound introduced by this call
   |
   = note: the type must implement `PrintableGenerator<_>`
   = help: the following types implement trait `PrintableGenerator<T>`:
             `&G` implements `PrintableGenerator<T>`
             `ArrayGenerator<G, T, N>` implements `PrintableGenerator<[T; N]>`
             `BinaryGenerator` implements `PrintableGenerator<Vec<u8>>`
             `BoolGenerator` implements `PrintableGenerator<bool>`
             `BoxedPrintableGenerator<'_, T>` implements `PrintableGenerator<T>`
             `CharactersGenerator` implements `PrintableGenerator<char>`
             `DateGenerator` implements `PrintableGenerator<jiff::civil::date::Date>`
             `DateStringGenerator` implements `PrintableGenerator<String>`
           and $N others
note: required by a bound in `TestCase::draw`
  --> src/test_case.rs
   |
   |     pub fn draw<T>(&self, generator: impl PrintableGenerator<T>) -> T {
   |                                           ^^^^^^^^^^^^^^^^^^^^^ required by this bound in `TestCase::draw`
